team2-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: team2-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: capstone-team
spec:
  hosts:
  - "*"
  gateways:
  - team2-gateway
  http:
  - route:
    - destination:
        host: team2-ingress
        port:
          number: 8080
